--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,11 +12,15 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+        environment:
+          description: 'Sample input'
+          required: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  # This workflow contains a single job called "sample"
+  sample:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -25,12 +29,6 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Tester
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo "Your input was to ${{ github.event.inputs.environment }}"
