Adapt process to run off GitHub actions (#3)
Co-authored-by: fagiothree <32491856+fagiothree@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # Intermediary output files
 temp/
+output/
 
-
+#credentials files
+credentials.json
+token.json
 
 # Logs
 logs
@@ -121,3 +124,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Comiled pyc files
+*.pyc
